# cmake-test

./: .clang-format  .clang-tidy  .clangd  .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.adoc  clangd.in  generate_git_hashes.cmake  version.h.in
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.github/workflows/: deploy-web.yml  release.yml
lib/: CMakeLists.txt  kivakirjasto.cmake.in  version_kivakirjasto.h.in
lib/calc/: calc.h
lib/calc/include/: funktiot.h
lib/calc/src/: funktiot.c
lib/cellar/: cellar.h
lib/cellar/include/: bicycle.h  bicyclecellar.h
lib/cellar/src/: bicycle.c  bicyclecellar.c
libtest/: CMakeLists.txt  main.c
libtest-user/: CMakeLists.txt  main.c
src/: CMakeLists.txt  funktiot.c  funktiot.h  main.c
src_clay/: CMakeLists.txt  clay_renderer_raylib.c  main.c
src_raylib/: CMakeLists.txt  README.md  commands.c  commands.h  engine.h  game.lua  lua_rooms.c  lua_rooms.h  main.c  room.h  rooms.c  shell.html  vt323_data.h
src_raylib/rooms/: arcrev.lua  coldstore.lua  coldvault.lua  rack9.lua  tutorial.lua
src_sdl/: CMakeLists.txt  main.c
test/: CMakeLists.txt  calc.c  calc.cmake  cellar.c  lib.cmake  tests.c  unittest.cmake
